Updated Swagger for User Routes
